# bootdrive

./: .envrc  .gitignore  Cargo.toml  FLATHUB.md  Justfile  README.md  flake.nix  pr.txt
.github/workflows/: flatpak.yml  release.yml  tests.yml
contrib/usb-signaller-mass-storage/: README.md  mass-storage-mode.patch
crates/bootdrive-cli/: Cargo.toml
crates/bootdrive-cli/src/: main.rs
crates/bootdrive-common/: Cargo.toml
crates/bootdrive-common/src/: error.rs  lib.rs  protocol.rs  state.rs
crates/bootdrive-gui/: Cargo.toml
crates/bootdrive-gui/src/: application.rs  catalog.rs  daemon_proxy.rs  image_selection.rs  library.rs  main.rs  usb_moded.rs  window.rs
crates/bootdrived/: Cargo.toml
crates/bootdrived/src/: authorization.rs  caller.rs  image.rs  lib.rs  main.rs  recovery.rs  service.rs  state.rs  usb.rs  usb_signaller.rs
data/: bootdrived.openrc  bootdrived.service  cargo-sources.json  net.bresilla.BootDrive.desktop  net.bresilla.BootDrive.metainfo.xml  net.bresilla.BootDrive.yml  net.bresilla.BootDrive1.conf  net.bresilla.BootDrive1.policy  net.bresilla.BootDrive1.service  zz-bootdrive-usb-moded.conf
packaging/alpine/: APKBUILD  bootdrived.post-install
packaging/flathub/: net.bresilla.BootDrive.yml
tools/: build-helper-aarch64.sh  build-usb-signaller-aarch64.sh  deploy-phone.sh  deploy-usb-signaller.sh  install-phone.sh  phone-install.sh  update-flatpak-sources.sh
