[workspace]
resolver = "2"
members = [
    "crates/bootdrive-common",
    "crates/bootdrive-cli",
    "crates/bootdrive-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kushtrim Bresilla <kushtrimbresilla@gmail.com>"]
repository = "https://github.com/bresilla/bootdrive"

[workspace.dependencies]
bootdrive-common = { path = "crates/bootdrive-common" }

serde = { version = "1", features = ["derive"] }
thiserror = "2"
zvariant = "5"
zbus = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "fs"] }
rustix = { version = "1", features = ["fs", "process"] }
usb-gadget = "1.2"

gtk4 = { version = "0.9", package = "gtk4", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"

[profile.release]
opt-level = 2
lto = "thin"
