[package]
name = "bootdrive-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "BootDrive command-line frontend (drives usb-signaller's com.meego.usb_moded)"

[[bin]]
name = "bootdrive"
path = "src/main.rs"

[dependencies]
bootdrive-common.workspace = true
zbus.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures-util = "0.3"
