[package]
name = "bootdrive-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types, D-Bus protocol contract and state model for BootDrive"

[dependencies]
serde.workspace = true
thiserror.workspace = true
zvariant.workspace = true
