[package]
name = "bootdrive-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "BootDrive GTK4/libadwaita GUI (Flatpak front-end)"

[[bin]]
name = "bootdrive-gui"
path = "src/main.rs"

[dependencies]
bootdrive-common.workspace = true
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
zbus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true }
async-channel = "2"
futures-util = "0.3"
serde = { workspace = true }
serde_json = "1"
