[package]
name = "bootdrived"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Privileged BootDrive backend: owns the USB mass-storage gadget over system D-Bus"

[lib]
name = "bootdrived"
path = "src/lib.rs"

[[bin]]
name = "bootdrived"
path = "src/main.rs"

[[bin]]
name = "probe"
path = "src/bin/probe.rs"

[dependencies]
bootdrive-common.workspace = true
serde = { workspace = true }
serde_json = "1"
thiserror.workspace = true
zvariant.workspace = true
zbus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
rustix.workspace = true
ctrlc = "3"

[target.'cfg(target_os = "linux")'.dependencies]
usb-gadget.workspace = true
